<resources>
    <string name="app_name">Inspection Review Manager</string>
    <string name="version_name">1.5</string>

    <!-- INSPECTION REVIEW CATEGORY TEXT -->
    <string name="date">Date</string>
    <string name="project">Project</string>
    <string name="concrete">Concrete</string>
    <string name="framing">Framing</string>
    <string name="conclusion">Conclusion</string>

    <!-- DATE ACTIVITY LABELS -->
    <string name="date_label">Date</string>
    <string name="time_label">Time</string>
    <string name="weather_label">Optional - Weather</string>
    <string name="temperature_label">Optional - Temperature (Celsius)</string>

    <!-- PROJECT ACTIVITY LABELS -->
    <string name="address_label">Address</string>
    <string name="city_label">City</string>
    <string name="province_label">Province</string>
    <string name="project_number_label">Project Number</string>
    <string name="developer_label">Developer</string>
    <string name="contractor_label">Contractor</string>
    <string name="type_of_review_label">Type of Review</string>
    <string name="type_of_review_footings_label">Footings</string>
    <string name="type_of_review_foundation_walls_label">Foundation Walls</string>
    <string name="type_of_review_sheathing_label">Sheathing</string>
    <string name="type_of_review_framing_label">Framing</string>
    <string name="type_of_review_other_label">*Other</string>
    <string name="description_label">*Please provide a Description below:</string>

    <!-- CONCRETE ACTIVITY LABELS -->
    <string name="rebar_position_label">Is rebar in correct position?</string>
    <string name="rebar_size_label">Does rebar have correct size and spacing?</string>
    <string name="formwork_label">Is formwork generally as per plan?</string>
    <string name="anchorage_label">Is hold down anchorage in place?</string>
    <string name="instructions_label">Optional - Instructions</string>
    <string name="reviewed_label">Reviewed</string>
    <string name="na_label">N/A</string>

    <!-- FRAMING ACTIVITY LABELS -->
    <string name="truss_spec_label">Is in conformance with truss spec?</string>
    <string name="ijois_label">Is in conformance with I-joist shop drawing?</string>
    <string name="bearing_label">Checked beam and girder bearing?</string>
    <string name="top_plates_label">Checked continuity of top plates?</string>
    <string name="lintels_label">Checked lintels/openings?</string>
    <string name="shearwalls_label">Checked shearwalls/fastening/hold downs?</string>
    <string name="tall_walls_label">Checked continuity of tall walls?</string>
    <string name="blocking_label">Checked blocking in floor system for point loads?</string>
    <string name="sheathing_label">Checked wall sheathing?</string>
    <string name="wind_girts_label">Checked wind girts?</string>

    <!-- CONCLUSION ACTIVITY LABELS -->
    <string name="observations_label">Optional - Observations?</string>
    <string name="comments_label">Optional - Comments?</string>
    <string name="review_status_label">Review Status</string>
    <string name="review_status_approved_label">Approved</string>
    <string name="review_status_not_approved_label">Not Approved</string>
    <string name="review_status_reinspection_required_label">Reinspection Required</string>
    <string name="reviewed_by_label">Reviewed By</string>
    <string name="stamp_inspection_review_label">Stamp Inspeciton Review Form</string>

    <!-- EMAIL ACTIVITY LABELS -->
    <string name="email_to_label">To (separate multiple addresses with comma, space, or return)</string>
    <string name="email_cc_label">Optional - CC (separate multiple addresses with comma, space, or return)</string>
    <string name="email_subject_label">Subject</string>
    <string name="email_message_label">Optional - Message</string>
    <string name="email_attachment_label">Attachment</string>

    <!-- ARCHIVE LIST FRAGMENT LABELS -->
    <string name="inspection_review_archive_label">Inspection Review Archive</string>
    <string name="search_filter_label">Search Filter:</string>

    <!-- FILE IO INTENT LABELS -->
    <string name="open_html_intent_label">Open HTML:</string>
    <string name="open_doc_intent_label">Open MS Word Doc:</string>
    <string name="open_email_intent_label">Open Email:</string>

    <!-- HEADING TEXT -->
    <string name="inspection_review_archive">Inspection Review Archive</string>
    <string name="logo_menu_button_content_description">Logo Menu</string>
    <string name="new_inspection_review">New Inspection Review</string>

    <!-- DEFAULT OFFICE EMAIL ADDRESS -->
    <string name="office_email_address">sel@seleng.com</string>

    <!-- DEFAULT AUTOCOMPLETE TEXT -->
    <string name="project_number_default">C</string>
    <string name="province_default">BC</string>

    <!-- DIALOG TEXT -->
    <string name="dialog_exporting_progress_message">Exporting Progress</string>
    <string name="dialog_exporting_progress_percentage_message">Exporting Progress Percentage</string>
    <string name="dialog_exporting_result_message">Exporting Result</string>
    <string name="dialog_review_in_progress_title">Review Already In Progress</string>
    <string name="dialog_review_in_progress_message">All data in the current session will be lost.\nDo you wish to continue?</string>
    <string name="dialog_update_review_title">Review Already On Record</string>
    <string name="dialog_update_review_message">Would you like to update the previous review?</string>
    <string name="dialog_close_review_title">Close Review</string>
    <string name="dialog_close_review_message">All data in this session will be lost.\nDo you wish to continue?</string>
    <string name="select_dialog_title">Available Actions:</string>
    <string name="select_dialog_message">What would you like to do?</string>
    <string name="delete_dialog_title">Delete Review"</string>
    <string name="delete_dialog_message">This action will permanently delete the review on record.\nDo you wish to continue?"</string>
    <string name="exporting_warning_dialog_title">Unsaved Review In Progress</string>
    <string name="exporting_warning_dialog_message">To Export, all data in the current session will be lost.\nDo you wish to continue?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- BUTTON TEXT -->
    <string name="button_settings">Settings</string>
    <string name="button_close">Close</string>
    <string name="button_select">Select</string>
    <string name="button_delete">Delete</string>
    <string name="button_edit_options">Options</string>
    <string name="button_edit">Edit</string>
    <string name="button_email">Email</string>
    <string name="button_export_html">Export HTML</string>
    <string name="button_export_doc">Export Doc</string>
    <string name="button_finish">Finshed</string>
    <string name="button_save">Save</string>
    <string name="button_create_email">Create Email</string>
    <string name="button_print">Print</string>
    <string name="button_print_preview">Print Preview</string>
    <string name="button_inspection_review">Inspection Review</string>
    <string name="button_back">Back</string>

    <!-- TOAST TEXT -->
    <string name="write_permissions_denied">Write Permissions Denied</string>
    <string name="email_message">Email"</string>
    <string name="exporting_html_message">Exporting HTML"</string>
    <string name="exported_html_message">HTML Exported"</string>
    <string name="unable_to_export_html_message">Unable To Export HTML"</string>
    <string name="exporting_doc_message">Exporting Doc"</string>
    <string name="exported_doc_message">Doc Exported"</string>
    <string name="print_message">Print Review"</string>
    <string name="unable_to_export_doc_message">Unable To Export Doc"</string>
    <string name="exported_database_message">Database Exported"</string>
    <string name="exporting_database_message">Exporting Database"</string>
    <string name="unable_to_export_database_message">Unable To Export Database"</string>
    <string name="updated_message">Review Updated"</string>
    <string name="saved_message">Inspection Review Saved"</string>
    <string name="delete_message">Deleted Review"</string>
    <string name="not_updated_message">Review Not Updated"</string>

    <!-- STRING ARRAYS -->
    <string-array name="arr">
        <item>@string/date</item>
        <item>@string/project</item>
        <item>@string/concrete</item>
        <item>@string/framing</item>
        <item>@string/conclusion</item>
    </string-array>

    <string-array name="cities">
        <item>Abbotsford</item>
        <item>Anmore</item>
        <item>Belcarra</item>
        <item>Bowen Island</item>
        <item>Burnaby</item>
        <item>Chilliwack</item>
        <item>Coquitlam</item>
        <item>Delta</item>
        <item>Fraser Valley</item>
        <item>Kent</item>
        <item>Langley</item>
        <item>Maple Ridge</item>
        <item>Mission</item>
        <item>New Westminster</item>
        <item>North Vancouver</item>
        <item>Pitt Meadows</item>
        <item>Port Moody</item>
        <item>Port Coquitlam</item>
        <item>Richmond</item>
        <item>Squamish</item>
        <item>Surrey</item>
        <item>Thompson-Nicola</item>
        <item>Vancouver</item>
        <item>Victoria</item>
        <item>West Vancouver</item>
        <item>Whistler</item>
        <item>White Rock</item>
        <item>Lions Bay</item>
    </string-array>

    <string-array name="weather">
        <item>Light Rain</item>
        <item>Rain</item>
        <item>Sunny</item>
        <item>Cloudy</item>
        <item>Snow</item>
        <item>Windy</item>
        <item>Clear</item>
    </string-array>
</resources>