<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.nicco.inspectionReviewManager.activities.ProjectActivity"
    android:focusableInTouchMode="true">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:fillViewport="true"
        android:paddingBottom="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="8dp"
            android:weightSum="1"
            android:focusableInTouchMode="true">

            <TextView
                android:id="@+id/textViewAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/address_label" />

            <com.example.nicco.inspectionReviewManager.customDatatypes.QueryingAutoCompleteTextView
                android:id="@+id/autocompleteAddress"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:inputType="text"
                android:maxLength="@integer/maxLargeInputLength"
                android:imeOptions="actionNext" />

            <TextView
                android:id="@+id/textViewCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:text="@string/city_label" />

            <com.example.nicco.inspectionReviewManager.customDatatypes.QueryingAutoCompleteTextView
                android:id="@+id/autoCompleteCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLength="@integer/maxLargeInputLength"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp" />

            <TextView
                android:id="@+id/textViewProvince"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:text="@string/province_label" />

            <com.example.nicco.inspectionReviewManager.customDatatypes.QueryingAutoCompleteTextView
                android:id="@+id/autoCompleteProvince"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:inputType="text"
                android:maxLength="@integer/maxLargeInputLength"
                android:imeOptions="actionNext" />

            <TextView
                android:id="@+id/textViewProjectNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:text="@string/project_number_label" />

            <com.example.nicco.inspectionReviewManager.customDatatypes.QueryingAutoCompleteTextView
                android:id="@+id/autoCompleteProjectNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:inputType="text"
                android:maxLength="@integer/maxMediumInputLength"
                android:imeOptions="actionNext" />

            <TextView
                android:id="@+id/textViewDeveloper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:text="@string/developer_label" />

            <com.example.nicco.inspectionReviewManager.customDatatypes.QueryingAutoCompleteTextView
                android:id="@+id/autoCompleteDeveloper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:inputType="text"
                android:maxLength="@integer/maxLargeInputLength"
                android:imeOptions="actionNext" />

            <TextView
                android:id="@+id/textViewContractor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:text="@string/contractor_label" />

            <com.example.nicco.inspectionReviewManager.customDatatypes.QueryingAutoCompleteTextView
                android:id="@+id/autoCompleteContractor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:inputType="text"
                android:maxLength="@integer/maxLargeInputLength"
                android:imeOptions="actionNext" />

            <TextView
                android:id="@+id/textViewTypeOfReview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:text="@string/type_of_review_label" />

            <CheckBox
                android:id="@+id/checkBoxFootings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/type_of_review_footings_label" />

            <CheckBox
                android:id="@+id/checkBoxFoundationWalls"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/type_of_review_foundation_walls_label" />

            <CheckBox
                android:id="@+id/checkBoxSheathing"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/type_of_review_sheathing_label" />

            <CheckBox
                android:id="@+id/checkBoxFraming"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/type_of_review_framing_label" />

            <CheckBox
                android:id="@+id/checkBoxOther"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/type_of_review_other_label" />

            <TextView
                android:id="@+id/textViewDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:inputType="textMultiLine"
                android:text="@string/description_label" />

            <com.example.nicco.inspectionReviewManager.customDatatypes.QueryingAutoCompleteTextView
                android:id="@+id/autoCompleteDescription"
                android:maxLength="@integer/maxLargeInputLength"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_weight="0.07" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
