<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.26">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewEmailTo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/email_to_label" />

            <com.example.nicco.inspectionReviewManager.customDatatypes.QueryingAutoCompleteTextView
                android:id="@+id/autocompleteEmailTo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:inputType="textMultiLine"
                android:maxLength="@integer/maxLargeInputLength" />

            <TextView
                android:id="@+id/textViewEmailCC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/email_cc_label" />

            <com.example.nicco.inspectionReviewManager.customDatatypes.QueryingAutoCompleteTextView
                android:id="@+id/autoCompleteEmailCC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:inputType="textEmailAddress"
                android:maxLength="@integer/maxLargeInputLength" />

            <TextView
                android:id="@+id/textViewSubject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/email_subject_label" />

            <EditText
                android:id="@+id/editTextSubject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:inputType="textMultiLine"
                android:maxLength="@integer/maxLargeInputLength" />

            <TextView
                android:id="@+id/textViewMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/email_message_label" />

            <EditText
                android:id="@+id/editTextMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:inputType="textMultiLine"
                android:maxLength="@integer/maxLargeInputLength" />

            <TextView
                android:id="@+id/textViewAttachmentLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/email_attachment_label" />

            <TextView
                android:id="@+id/textViewAttachment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:inputType="none" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayoutWebViewButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">

        <View
            style="@style/HorizontalDivider"
            android:layout_weight="0" />

        <Button
            android:id="@+id/buttonCreateEmail"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_create_email" />
    </LinearLayout>

</LinearLayout>